assets/css/home.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');

:root{
    --light-blue: #40C8E0;
    --white: #ffffff;
    --black: #000000;
    --poppins: 'Poppins', sans-serif;

}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;  
}

div .row {
    --bs-gutter-x: 0;
    --bs-gutter-y: 0;
}


#blue-btn{
    background-color: var(--light-blue);
    color: var(--white);
    border: 1px solid var(--light-blue);
}
#white-btn{
    background-color: var(--white);
    color: var(--black);
    border: 1px solid var(--white);
}
.text-white{
    color: var(--white);
}
.logo{
    font-family: var(--poppins);
    font-style: italic;
    font-weight: bold;
    font-size: 60px;
    color: #FFFFFF;
}
nav ul li a{
    color: var(--black);
}
.navbar .navbar-expand-lg .navbar-light{
    background-color: transparent;
}
.navbar-dark .navbar-nav .nav-link{
    margin: 0 10px;
}
.banner{
    background-image: url(../img/banner.png);
    height: 100%;
    /* background-repeat: no-repeat; */
    background-size: cover;
    /* padding: 40px 0; */
}
.text-content{
    padding-top: 200px ;

}
.bannar-heading{
    font-family:var(--poppins);
    font-style: normal;
    font-weight: 600;
    font-size: 45px;
}
.banner-p{
    font-family:var(--poppins);
    font-style: normal;
    font-weight: normal;
    font-size: 16px;
    max-width: 90%;
}
.banner-btn{
    background: #008EF5;
    color: var(--white);
    border-radius: 4px;
    padding: 5px;
    font-family: var(--poppins);
    font-style: normal;
    font-weight: normal;
    font-size: 36px;
    padding: 10px 30px;
    border: none;
    margin-top: 10px;
    margin-bottom: 20px;
}
.section-one, .section-two, .section-three, .section-four{
    margin-top: 50px;
    padding: 5px;
    /* background: #E5E5E5; */
}
.section-one .p-1{
    font-family: var(--poppins);
    font-style: normal;
    font-weight: bold;
    font-size: 48px;
    color: var(--light-blue);
}
.section-one .p-2 {
    font-family: var(--poppins);
    font-style: normal;
    font-weight: normal;
    font-size: 24px;
    color: #2C2C2E;
    margin-top: 10px;
}
.section-two .p-1{
    font-family: var(--poppins);
    font-style: normal;
    font-weight: 450;
    font-size: 20px;
    color: #666666;
}
.section-two .p-2{
    font-family: var(--poppins);
    font-style: normal;
    font-weight: bold;
    font-size: 36px;
    color: #666666;
}
.section-three .testimony{
    margin-top: 25px;
    margin-bottom: 25px;
}
.section-three .testimony-text{
    font-family: var(--poppins);
    font-style: normal;
    font-weight: 450;
    font-size: 18px;
    color: #000000;
}
.testimony-coloured-1{
    color: var(--light-blue);
}
.testimony-coloured-2{
    color: orange;
}
.testimony-coloured-3{
    color: purple;
}
.section-three .testimony-person{
    font-family: var(--poppins);
    font-style: normal;
    font-weight: 450;
    font-size: 20px;
    line-height: 33px;
    color: #666666;
    margin-left: 20px;
    margin-top: 15px;
}
.section-four .box{
    background-color: #E5E5E5;
    opacity: 60;
    border-radius: 20px;
    padding: 10px;
    margin: 10px;
}
.section-four .box-sub{
    margin-bottom: 40px;
}
.section-four .box-p{
    /* color: var(--light-blue); */
    font-family: var(--poppins);
    font-style: normal;
    font-weight: 450;
    font-size: 20px;
}
.section-four .box-p2{
    width: 100%;
    color: var(--black);
    font-family: var(--poppins);
    font-weight: bold;
    font-size: 30px;
    line-height: 50px;
    letter-spacing: -0.02em;
}
.section-four .box-p3{
    color: #666666;
    font-family: var(--poppins);
    font-style: normal;
    font-weight: 450;
    font-size: 20px;
    line-height: 33px;
}



@media (min-width: 768px) {
    .text-content{
        padding-top: 250px ;
        padding-bottom: 100px;
    
    }
    .bannar-heading{
        font-size: 64px;
    }
    .banner-p{
        font-size: 30px;
        max-width: 80%;
    }
    .banner-btn{
        padding: 10px 50px;
        font-size: 36px;
        margin-top: 20px;
    }
    .section-four .box-p{
        font-size: 24px;
    }
    .section-four .box-p2{
        line-height: 76px;
    }
    .section-four .box-p3{
        font-size: 24px;
    }
}

